<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/screen_text_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center|right"
        android:layout_weight="1"
        android:background="@drawable/text_input"
        android:gravity="right"
        android:text="0"
        android:textSize="40dp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginTop="0dp"
        android:layout_weight="1"
        android:weightSum="4"
        tools:layout_editor_absoluteX="0dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/reset_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/my_button"
            android:onClick="ClickButton"
            android:text="@string/reset"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="NestedWeights" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/del_character_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/my_button"
            android:onClick="ClickButton"
            android:text="@string/delete"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="NestedWeights" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/multiply_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/my_button"
            android:text="@string/multiply"
            android:onClick="ClickButton"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="NestedWeights" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/divide_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/my_button"
            android:text="@string/divide"
            android:onClick="ClickButton"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="NestedWeights" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginTop="0dp"
        android:layout_weight="1"
        android:weightSum="4"
        tools:layout_editor_absoluteX="0dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/seven_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/my_button"
            android:text="@string/seven"
            android:onClick="ClickButton"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="NestedWeights" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/eight_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/my_button"
            android:text="@string/eight"
            android:onClick="ClickButton"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="NestedWeights" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/nine_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/my_button"
            android:text="@string/nine"
            android:onClick="ClickButton"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="NestedWeights" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/plus_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/my_button"
            android:text="@string/plus"
            android:onClick="ClickButton"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="NestedWeights" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginTop="0dp"
        android:layout_weight="1"
        android:weightSum="4"
        tools:layout_editor_absoluteX="0dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/four_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/my_button"
            android:onClick="ClickButton"
            android:text="@string/four"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="NestedWeights" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/five_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/my_button"
            android:text="@string/five"
            android:onClick="ClickButton"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="NestedWeights" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/six_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/my_button"
            android:text="@string/six"
            android:onClick="ClickButton"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="NestedWeights" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/minus_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/my_button"
            android:text="@string/minus"
            android:onClick="ClickButton"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="NestedWeights" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginTop="0dp"
        android:layout_weight="1"
        android:weightSum="4"
        tools:layout_editor_absoluteX="0dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/one_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/my_button"
            android:text="@string/one"
            android:onClick="ClickButton"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="NestedWeights" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/two_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/my_button"
            android:text="@string/two"
            android:onClick="ClickButton"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="NestedWeights" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/three_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/my_button"
            android:text="@string/three"
            android:onClick="ClickButton"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="NestedWeights" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/percent_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/my_button"
            android:text="@string/percent"
            android:onClick="ClickButton"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="NestedWeights" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginTop="0dp"
        android:layout_weight="1"
        tools:layout_editor_absoluteX="0dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/point_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/my_button"
            android:text="@string/point"
            android:onClick="ClickButton"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="NestedWeights" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/zero_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/my_button"
            android:text="@string/zero"
            android:onClick="ClickButton"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="NestedWeights" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/equally_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="2"
            android:background="@drawable/my_button"
            android:text="@string/equally"
            android:onClick="ClickButton"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="NestedWeights" />

    </LinearLayout>

</LinearLayout>